
2022-12-09  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR 426 Default collation option
	* flag.def, cobc.c (process_command_line): add new default-colseq flag
	* tree.h, parser.y (cb_deciph_default_colseq_name): new helper function
	* parser.y (build_default_colseq, setup_default_colseq, setup_program):
	  initialize default collating sequence for programs when the
	  default-colseq flag is not NATIVE

2022-12-08 Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (items_have_same_data_clauses): fix handling for ANY LENGTH
	  parameters, fixing bug #851
	* parser.y: fixes for prototype checking
	* typeck.c: work on warning messages for prototype checking
	* typeck.c (error_if_signatures_differ): add check for ENTRY-CONVENTION
	* typeck.c (cb_validate_program_environment): fixed bad test of warning
	  option for CLASS check
	* typeck.c (cb_emit_sort_init): minor refactoring
	* typeck.c (cb_build_ppointer), tree.c (cb_name_1): added missing
	  handling for prototype
	* codegen.c (output_param): added handling for prototype name,
	  returning its name as literal

2022-12-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.h (struct cb_replace_src, struct cb_replace_list, struct
	  cb_turn_list, cb_turn_list, struct list_error, struct list_replace)
	  (struct list_skip, struct list_files), tree.h (enum cb_replace): move
	  internal struct and symbol declarations to tree.h, and adapt some
	  structures for strict partial text replacement
	* cobc.c (print_replace_text, print_replace_main), pplex.l
	  (set_print_replace_list, ppecho), ppparse.y (ppp_replace_src,
	  ppp_replace_list_add): handle strict partial text replacement, enabled
	  unless dialect option partial-replace-when-literal-src
	  (formerly partial-replacing-with-literal) is "skip"

2022-12-06 Simon Sobisch <simonsobisch@gnu.org>

	* field.c (validate_redefines): check for target not to have ANY LENGTH

2022-12-05  Nicolas Berthier <nicolas.berthier@ocamlpro.com>
